Bug 464203 - Interpolation properties: Points text box is black-on-black when dark theme is in use
Summary: Interpolation properties: Points text box is black-on-black when dark theme i...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.0
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-12 16:59 UTC by Paul Worrall
Modified: 2023-02-05 17:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2023-01-12 16:59:22 UTC
STEPS TO REPRODUCE
1. Select Breeze Dark global theme
2. Add an XYInterpolationCurve
3. Select its Properties => General
4. Select Points=Custom

OBSERVED RESULT
Cannot read the number of points

EXPECTED RESULT
Number is white-on-black like the other text boxes

SOFTWARE/OS VERSIONS
Plasma: 5.26.5
Frameworks: 5.101.0
Qt: 5.15.8
Graphics: Wayland
Comment 1 Alexander Semke 2023-02-05 17:32:30 UTC
Git commit 85506cf49c0b1029227c62eeb4b1e51e454dbbed by Alexander Semke.
Committed on 05/02/2023 at 17:32.
Pushed by asemke into branch 'master'.

Don't hard-code the black color when highlighting an invalid interpolation point number and then going back to a correct number in XYInterpolationCurveDock.
FIXED-IN: 2.10

M  +3    -3    src/kdefrontend/GuiTools.cpp
M  +1    -1    src/kdefrontend/GuiTools.h
M  +7    -11   src/kdefrontend/dockwidgets/XYInterpolationCurveDock.cpp

https://invent.kde.org/education/labplot/commit/85506cf49c0b1029227c62eeb4b1e51e454dbbed