Don't hard-code the black color when highlighting an invalid interpolation point number and then going back to a correct number in XYInterpolationCurveDock.

BUG: 464203
FIXED-IN: 2.10